force-app/main/default/objects/Reservation_Dashboard__c/Reservation_Dashboard__c.object-meta.xml
<CustomObject>
    <description>Reservation Dashboard stores the records based on the patient assigned to a bed. Mainly stores the records for the Reservation Dashboard report.</description>
    <label>Reservation Dashboard</label>
    <nameField>
        <displayFormat>RD-{00000000}</displayFormat>
        <label>Reservation Dashboard Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>