force-app/main/default/objects/Reservation_Dashboard__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>This field is used to store the end date of an attached ilne item.</description>
    <formula>Reservation_Line_Item__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>