force-app/main/default/objects/Reservation_Dashboard__c/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine whether it is deleted or not.</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>