force-app/main/default/objects/Reservation_Dashboard__c/fields/Line_item_status__c.field-meta.xml
<CustomField>
    <fullName>Line_item_status__c</fullName>
    <description>This field is used to store the value of line-item status&apos;s field value.</description>
    <formula>TEXT(Reservation_Line_Item__r.Bed_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line item status</label>
    <type>Text</type>
</CustomField>