force-app/main/default/objects/Reservation_Dashboard__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store Room/Suite of booked location.</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Reservation Dashboards</relationshipLabel>
    <relationshipName>Reservation_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>