force-app/main/default/objects/Reservation_Dashboard__c/fields/Occupied_Date__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Date__c</fullName>
    <description>used to store the exact booked date of a Room/Suite</description>
    <label>Occupied Date</label>
    <type>Date</type>
</CustomField>