force-app/main/default/objects/Reservation_Dashboard__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to store the information of patient staying on Room/Suite</description>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reservation Dashboards</relationshipLabel>
    <relationshipName>Reservation_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>