force-app/main/default/objects/Reservation_Dashboard__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to attach reservation.</description>
    <label>Reservation</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Reservation Dashboards</relationshipLabel>
    <relationshipName>Reservation_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>