force-app/main/default/objects/Reservation_Dashboard__c/fields/Reservation_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to attach reservation line item.</description>
    <label>Reservation Line Item</label>
    <referenceTo>Reservation_Line_Item__c</referenceTo>
    <relationshipLabel>Reservation Dashboards</relationshipLabel>
    <relationshipName>Reservation_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>