force-app/main/default/objects/Reservation_Dashboard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Occupied_Date__c</columns>
    <columns>Location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Line_item_status__c</columns>
    <columns>Patient__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>